.k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-deployment
  labels:
    app: example-app
spec:
  template:
    metadata:
      name: example-pod
      labels:
        app: example-app
    spec:
      containers:
      - name: http
        image: example-service:test
        imagePullPolicy: Never # Use locally built image
        ports:
        - name: http
          containerPort: 8080
        readinessProbe:
          httpGet:
            path: /hello
            port: http
        livenessProbe:
          httpGet:
            path: /hello
            port: http
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            memory: 100Mi
  selector:
    matchLabels:
      app: example-app
