.k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: weather-service
spec:
  type: NodePort
  selector:
    app: weather-service-app
  ports:
  - name: http
    port: 80
    targetPort: http
